add email auth
